# TFG

Red neuronal/: class.names  dataset_v8.yaml  train1.py
Red neuronal/runs/detect/yolov8n_v8_50e8/: args.yaml  results.csv
catkin_wsunitree/src/go1-math-motion/go1-math-motion/: CMakeLists.txt
catkin_wsunitree/src/go1-math-motion/go1-math-motion/launch/: caminar.launch  destino.launch
catkin_wsunitree/src/go1-math-motion/go1-math-motion/src/: arduino.py  caminar.py  coordenadas_GPS_tiemporeal.py  destino_prueba.py  graficar_datos.py  maps.py  resultados.py
catkin_wsunitree/src/go1-math-motion/go1-math-motion/src/brujula_correa/: brujula_correa.ino
catkin_wsunitree/src/unitreecamerasdk/: CMakeLists.txt  package.xml
catkin_wsunitree/src/unitreecamerasdk/launch/: oak-d.launch
catkin_wsunitree/src/unitreecamerasdk/src/: oak-d.py  red_neuronal.py
